removed turbolinks from project, also added mainskill migration in skills table

--- a/app/views/musicians/show.html.erb
+++ b/app/views/musicians/show.html.erb
@@ -61,6 +61,8 @@ Description:<br />
         <%= f.label :categories %>
         <%= f.select :level, [['Beginner', 1], ['Intermediate', 2], ['Advanced', 3]]  %>
         <%= f.hidden_field :musician_id, :value => current_musician.id %>
+        <%= f.label :mainskill %>
+        <%= f.check_box (:mainskill) %>
       </div>
       <div>
         <%= f.submit %>
