--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,6 @@
+@import 'http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css';
+@import 'http://fonts.googleapis.com/css?family=Roboto:700,400';
+
 .slick-prev:after {
   content: ">";
   color: red;
@@ -17,7 +20,7 @@ body{
 
 }
 main {
-  @include span-columns(9);
+  @include span-columns(10);
 
 
   h1 {
@@ -40,7 +43,11 @@ main {
       @include span-columns(3 of 12);
       @include omega(4n);
       text-align: center;
-      background-color: black;
+      -webkit-box-shadow:
+        0 2px 8px rgba(0,0,0,0.5),
+        inset 0 1px rgba(255,255,255,0.3),
+        inset 0 10px 20px rgba(255,255,255,0.25),
+        inset 0 -15px 30px rgba(0,0,0,0.3);
 
       a {
         display: block;
@@ -53,13 +60,37 @@ main {
     @include outer-container;
 
     li {
-      @include span-columns(3 of 12);
-      @include omega(4n);
+      @include span-columns(4 of 12);
+      @include omega(3n);
       text-align: center;
       margin-bottom: 20px;
-      border: 2px dashed rgba(0,0,0,0.2);
-      background-color: rgba(0,0,0,0.05);
-      box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.15);
+      -webkit-box-shadow:
+        0 2px 8px rgba(0,0,0,0.5),
+        inset 0 1px rgba(255,255,255,0.3),
+        inset 0 10px 20px rgba(255,255,255,0.25),
+        inset 0 -15px 30px rgba(0,0,0,0.3);
+      border: blurred;
+
+
+      .social_icons {
+        display: inline-block;
+        width: 48px;
+        height: 48px;
+        line-height: 48px;
+        text-align: center;
+        border-radius: 50%;
+        background-color: #3b5998;
+        transition: all 0.3s ease;
+        outline: 0;
+
+        box-shadow:
+        0 2px 4px rgba(0,0,0, 0.12),
+        0 2px 4px rgba(0,0,0, 0.24);
+
+
+
+        }
+
       p {
         font-size: 0.77em;
       }
@@ -73,7 +104,7 @@ main {
 }
 
 aside {
-  @include span-columns(3);
+  @include span-columns(2);
   color: white;
 
   div.genres-scroll {
@@ -92,6 +123,6 @@ aside {
   margin-bottom: 30px;
   height: 700px;
   position: relative;
-  bottom: 240px;
+  bottom: 210px;
 
 }
