added position to musician card

--- a/app/views/home/_musicians.html.erb
+++ b/app/views/home/_musicians.html.erb
@@ -16,7 +16,13 @@
           <a class="twitter" href=""> </a>
 
             <div class="musician_position">
-              <%= Musician.positions.first %>
+              <% if musician.positions.count() > 0 %>
+                <h1>Skills:</h1><br />
+                <% musician.positions.each do |position| %>
+                  <%= position.description %><br />
+                <% end %>
+              <% end %>
+
                 <div class="card_article">
 
 
