--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-x<div class="container">
+<div class="container">
 
   <div class="hero">
 
@@ -22,7 +22,6 @@ x<div class="container">
         <%= render "home/musicians" %>
       </div>
     </section>
-
   </main>
 
   <aside id="search-category-list">
