--- a/app/views/musicians/show.html.erb
+++ b/app/views/musicians/show.html.erb
@@ -1,95 +1,113 @@
-<h1><%= @musician.firstname %> <%= @musician.lastname %></h1>
+<div class="container">
 
-<h3>Bio</h3><br />
+  <br />
+  <aside id="profile-side">
+    <h1><%= @musician.firstname %> <%= @musician.lastname %></h1>
 
-<%= image_tag @musician.avatar.profile %><br />
+    <%= link_to "Back", request.referer.present? ? request.referer : root_path %><br />
 
-Name:<br />
-<%= @musician.firstname %> <%= @musician.lastname %><br /><br />
+    <h3>Bio</h3><br />
 
-Description:<br />
-<%= @musician.description %>
+    <%= image_tag @musician.avatar.profile %><br />
 
-<% if @musician.youtube_url %>
+    Name:<br />
+    <%= @musician.firstname %> <%= @musician.lastname %><br /><br />
 
-  <h1>Demo Reel</h1>
+    Description:<br />
+    <%= @musician.description %>
 
-  <div class="embed-container">
-    <%= embed(@musician.youtube_url) %>
-  </div>
-<% end %>
+    <% if musician_signed_in? %>
+      <% if current_musician.id == @musician.id %><br />
 
-<% if musician_signed_in? %>
-  <% if current_musician.id == @musician.id %><br />
+        <br /><%= link_to "Edit Profile", edit_musician_registration_path %>
 
-    <% if current_musician.owned_bands.count > 0 %>
-
-      <h1>Bands owned</h1><br />
-
-      <% current_musician.owned_bands.each do |band|%>
-        Band:  <%= band.name %><br />
-        <%= button_to 'View Band', band_path(band), :method => :get %><br />
-      <% end %>
-
-    <% end %>
-
-    <% if current_musician.members.count > 0 %>
-
-      <h1>Member of Bands</h1><br />
-
-      <% current_musician.members.each do |member|%>
-        Band:  <%= member.band.name %><br />
-        Position:  <%= member.position.description %><br />  <%= button_to 'View Band', band_path(member.band.id), :method => :get %><br />
-      <% end %>
-
-    <% end %>
-
-    <% if current_musician.approvals.where(approved: false).count > 0 %>
-
-      <h1>Membership Pending Approval</h1><br />
-
-      <% current_musician.approvals.each do |approval|%>
-
-        <% if approval.approved == false %>
-          Band:  <%= approval.band.name %><br />
-          Position:  <%= approval.member.position.description %><br />
-          Approved:  <%= approval.approved %>
-          <%= button_to 'View Band', band_path(approval.band.id), :method => :get %><br />
+        <%= form_for [@musician, @skill] do |f| %>
+          <div id="field">
+            <%= f.label :position %><br />
+            <%= f.select :position_id, options_for_select(@positions.collect  { |p| [ p.description, p.id] }) %>
+            <%= f.label :categories %>
+            <%= f.select :level, [['Beginner', 1], ['Intermediate', 2], ['Advanced', 3]]  %>
+            <%= f.hidden_field :musician_id, :value => current_musician.id %>
+          </div>
+          <div>
+            <%= f.submit %>
+          </div>
         <% end %>
       <% end %>
-
     <% end %>
+  </aside>
 
-    <br /><%= link_to "Edit Profile", edit_musician_registration_path %>
+  <main>
+    <% if musician_signed_in? %>
+      <div id="bands-owned">
+        <% if current_musician.id == @musician.id %>
 
-    <%= form_for [@musician, @skill] do |f| %>
-      <div id="field">
-        <%= f.label :position %><br />
-        <%= f.select :position_id, options_for_select(@positions.collect  { |p| [ p.description, p.id] }) %>
-        <%= f.label :categories %>
-        <%= f.select :level, [['Beginner', 1], ['Intermediate', 2], ['Advanced', 3]]  %>
-        <%= f.hidden_field :musician_id, :value => current_musician.id %>
+        <% if current_musician.owned_bands.count > 0 %>
+
+          <h1>Bands owned:</h1><br />
+
+          <% current_musician.owned_bands.each do |band|%>
+            Band:  <%= band.name %><br />
+            <%= button_to 'View Band', band_path(band), :method => :get %><br />
+          <% end %>
+        <% end %>
       </div>
-      <div>
-        <%= f.submit %>
+
+      <div id="member-of-bands">
+        <% if current_musician.members.count > 0 %>
+
+          <h1>Member of:</h1><br />
+
+          <% current_musician.members.each do |member|%>
+            Band:  <%= member.band.name %><br />
+            Position:  <%= member.position.description %><br />  <%= button_to 'View Band', band_path(member.band.id), :method => :get %><br />
+          <% end %>
+        <% end %>
       </div>
+
+      <div id="pending-approvals">
+        <% if current_musician.approvals.where(approved: false).count > 0 %>
+
+          <h1>Membership Pending Approval</h1><br />
+
+          <% current_musician.approvals.each do |approval|%>
+
+            <% if approval.approved == false %>
+              Band:  <%= approval.band.name %><br />
+              Position:  <%= approval.member.position.description %><br />
+              Approved:  <%= approval.approved %>
+              <%= button_to 'View Band', band_path(approval.band.id), :method => :get %><br />
+            <% end %>
+          <% end %>
+        <% end %>
+      </div>
+
+      <% end %>
     <% end %>
-  <% end %>
-<% end %>
-<%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{Figaro.env.google_maps_api_key }&callback=initMap", async: true, defer: true %>
+    <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{Figaro.env.google_maps_api_key }&callback=initMap", async: true, defer: true %>
 
+    <div id="youtube-window">
+      <% if @musician.youtube_url %>
 
-<br />
-  Musicians near
-  <% if @musician == current_musician %>
-    you:
-  <% else %>
-    <%= @musician.firstname %>:<br />
-  <% end %>
+        <h1>Demo Reel</h1>
 
-<br /><%= link_to "Back", request.referer.present? ? request.referer : root_path %>
+        <div class="embed-container">
+          <%= embed(@musician.youtube_url) %>
+        </div>
+      <% end %>
+    </div>
 
-<div id="map" data-latitude=<%= @musician.latitude %> data-longitude=<%= @musician.longitude%>  >
-</div>
+    <div id="nearby-musicians">
+      <br />
+        Musicians near
+        <% if @musician == current_musician %>
+          you:
+        <% else %>
+          <%= @musician.firstname %>:<br />
+        <% end %>
 
+      <div id="map" data-latitude=<%= @musician.latitude %> data-longitude=<%= @musician.longitude%>  >
+      </div>
+    </div>
+  </main>
 </div>
