--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -78,14 +78,26 @@ main {
         line-height: 48px;
         text-align: center;
         border-radius: 50%;
-        background-color: #3b5998;
-        transition: all 0.3s ease;
         outline: 0;
 
         box-shadow:
         0 2px 4px rgba(0,0,0, 0.12),
         0 2px 4px rgba(0,0,0, 0.24);
 
+
+
+        }
+
+        h3.position_text
+        { margin-top: 50px;
+
+
+        }
+        .card_article{
+          width: 100%;
+        }
+
+        a.musician_aboutme {
 
 
         }
