Added images and edited seeds for demo.  Added pg to gemfile

--- a/app/views/home/_bands.html.erb
+++ b/app/views/home/_bands.html.erb
@@ -2,7 +2,7 @@
 <% @bands.each do |band| %>
   <li>
   <%= link_to band_path(band.id) do %>
-    <%= image_tag band.poster.thumb %>
+    <%= image_tag band.poster.profile %>
     <p><%= band.name %></p>
   <% end %>
   </li>
