--- a/app/views/home/_musicians.html.erb
+++ b/app/views/home/_musicians.html.erb
@@ -3,7 +3,7 @@
     <li>
     <div class="card_content">
     <%= link_to musician.firstname, musician_path(musician.id) %><br />
-    <%= image_tag musician.avatar.thumb %><br />
+    <%= image_tag musician.avatar.profile %><br />
       <div class="card_content_padding">
 
 
