--- a/app/views/home/_bands.html.erb
+++ b/app/views/home/_bands.html.erb
@@ -1,10 +1,9 @@
 <ul class="band-list">
 <% @bands.each do |band| %>
   <li>
-  <%= link_to band_path(band.id) do %>
+  <%= link_to band.name, band_path(band.id)%>
     <%= image_tag band.poster.profile %>
     <p><%= band.name %></p>
-  <% end %>
   </li>
 <% end %>
 </ul>
