Added description to partial

--- a/app/views/home/_bands.html.erb
+++ b/app/views/home/_bands.html.erb
@@ -3,7 +3,7 @@
   <li>
   <%= link_to band.name, band_path(band.id)%>
     <%= image_tag band.poster.profile %>
-    <p><%= band.name %></p>
+    <p><%= band.description %></p>
   </li>
 <% end %>
 </ul>
