--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -67,7 +67,7 @@
 
 <% end %>
 
-<br /><%= link_to "Back", request.referer.present? ? request.referer : root_path %>
+<br /><%= button_to "Back", request.referer.present? ? request.referer : root_path, method: :get %>
 <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{Figaro.env.google_maps_api_key }&callback=initMap", async: true, defer: true %>
 
 <div id="map" data-latitude=<%= @musician.latitude %> data-longitude=<%= @musician.longitude%>  >
