--- a/app/views/home/_musicians.html.erb
+++ b/app/views/home/_musicians.html.erb
@@ -11,10 +11,10 @@
         <% musician.positions.each do |position| %>
           <%= position.description %><br />
         <% end %>
-      <% end %>
+
 
         <div class="card_article">
-          <h3 class="position_text"> Singer  </h3>
+          <h3 class="position_text"> </h3>
             <a class="musician_aboutme"> I love music and stuff </a>
 
 
