--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,7 +26,7 @@
     </main>
 
     <aside id="search-category-list">
-      <p>Filter Bands by Genre:</p>
+      <p class="filter_genre">Filter Bands by Genre:</p>
       <div class="genres-scroll">
         <ul>
           <li>
