--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,32 +16,36 @@
         <%=image_tag("background/Band Aide Logo.png")%>
       </a>
       <a href="" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
-    <div class="nav">
-      <ul id="navigation-menu">
-        <li class="nav-link"><a><%= link_to "Home", root_path %></a></li>
-          <% if musician_signed_in? %>
-            <li class="nav-link"><a><%= link_to "Create a band", new_band_path %> </a></li>
-            <li class="nav-link"><a><%= image_tag current_musician.avatar.thumb %> </a></li>
-            <li class="nav-link"><a><%= link_to "Show Profile", musician_path(current_musician) %> </a></li>
-            <li class="nav-link"><a><%= link_to "Sign Out", destroy_musician_session_path, :method => :delete %> </a></li>
-          <% else %>
-            <li class="nav-link"><a><%= link_to "Sign In", new_musician_session_path, :method => :get %> </a></li>
-            <li class="nav-link"><a><%= link_to "Sign up", new_musician_registration_path, :method => :get %> </a></li>
-          <% end %>
-    </div>
 
-    <div class="navigation-tools">
-      <div class="search-bar">
-        <div class="search-and-submit">
-          <input type="search" placeholder="Search for band or musician" />
-          <button type="submit">
-            <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/search-icon.png" alt="">
-          </button>
+      <div class="nav">
+        <ul id="navigation-menu">
+          <li class="nav-link"><a><%= link_to "Home", root_path %></a></li>
+            <% if musician_signed_in? %>
+              <li class="nav-link"><a><%= link_to "Create a band", new_band_path %> </a></li>
+              <li class="nav-link"><a><%= image_tag current_musician.avatar.thumb %> </a></li>
+              <li class="nav-link"><a><%= link_to "Show Profile", musician_path(current_musician) %> </a></li>
+              <li class="nav-link"><a><%= link_to "Sign Out", destroy_musician_session_path, :method => :delete %> </a></li>
+            <% else %>
+              <li class="nav-link"><a><%= link_to "Sign In", new_musician_session_path, :method => :get %></a>
+              </li>
+              <li class="nav-link"><a><%= link_to "Sign up", new_musician_registration_path, :method => :get %> </a></li>
+            <% end %>
+        </ul>
+      </div>
+
+      <div class="navigation-tools">
+        <div class="search-bar">
+          <div class="search-and-submit">
+            <input type="search" placeholder="Search for band or musician" />
+            <button type="submit">
+              <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/search-icon.png" alt="">
+            </button>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</header>
+  </header>
+
     <% if notice %>
       <p class="alert alert-success"><%= notice %></p>
     <% end %>
@@ -50,6 +54,22 @@
     <% end %>
 
   <%= yield %>
+
+<!-- Code for modal, if we want one -->
+  <!-- <div class="modal">
+  <label for="modal-1">
+    <div class="modal-trigger">Click for Modal</div>
+  </label>
+  <input class="modal-state" id="modal-1" type="checkbox" />
+  <div class="modal-fade-screen">
+    <div class="modal-inner">
+      <div class="modal-close" for="modal-1"></div>
+      <h1>Modal Title</h1>
+      <p class="modal-intro">Intro text.</p>
+      <p class="modal-content"></p>
+      </div>
+    </div>
+  </div> -->
 
   </body>
 </html>
