--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,6 +12,7 @@
         <a id="nav-toggle" href="#">Filter by attribute</a>
         <aside id="sidebar">
           <nav>
+            <p>Filter bands by genre:</p>
             <ul class="side-menu">
               <li>
                 <%= link_to "All", remote: true, class: "All" %>
@@ -19,6 +20,17 @@
               <% @genres.each do |genre| %>
                 <li>
                   <%= link_to genre.description, remote: true, class: "#{genre.description}" %>
+                </li>
+              <% end %>
+            </ul>
+            <p>Filter musicians by position:</p>
+            <ul class="side-menu">
+              <li>
+                <%= link_to "All", remote: true, class: "All" %>
+              </li>
+              <% @positions.each do |position| %>
+                <li>
+                  <%= link_to position.description, remote: true, class: "#{position.description}" %>
                 </li>
               <% end %>
             </ul>
@@ -43,7 +55,7 @@
       </section>
     </main>
 
-    <aside id="search-category-list">
+    <!-- <aside id="search-category-list">
       <p>Filter Bands by Genre:</p>
       <div class="genres-scroll">
         <ul>
@@ -71,7 +83,7 @@
           </ul>
       </div>
 
-    </aside>
+    </aside> -->
   </div>
 
 </body>
