--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
     </div>
 
     <main>
-      <h1>Welcome to Band Aide</h1>
+      <h1 class="title">Welcome to Band Aide</h1>
 
       <button class="filter-side-menu">
         <a id="nav-toggle" href="#">Filter by attribute</a>
@@ -55,7 +55,7 @@
       </section>
     </main>
 
-    <!-- <aside id="search-category-list">
+    <aside id="search-category-list">
       <p>Filter Bands by Genre:</p>
       <div class="genres-scroll">
         <ul>
@@ -83,7 +83,7 @@
           </ul>
       </div>
 
-    </aside> -->
+    </aside>
   </div>
 
 </body>
