--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,17 +6,19 @@
     <%= csrf_meta_tags %>
     <%= Gon::Base.render_data %>
     <link href='https://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css'>
+    <%= stylesheet_link_tag "application" %>
+
   </head>
 
   <body>
-  <header class="navigation">
+    <header class="navigation">
     <div class="navigation-wrapper">
       <a href="javascript:void(0)" class="logo">
         <%=image_tag("background/Band Aide Logo.png")%>
       </a>
-      <a href="" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
+      <a href="" class="navigation-menu-button" id="js-mobile-menu">MENU</a> -->
 
-      <div class="nav">
+      <!-- <div class="nav">
         <ul id="navigation-menu">
           <li class="nav-link"><a><%= link_to "Home", root_path %></a></li>
             <% if musician_signed_in? %>
@@ -30,7 +32,9 @@
               <li class="nav-link"><a><%= link_to "Sign up", new_musician_registration_path, :method => :get %> </a></li>
             <% end %>
         </ul>
-      </div>
+      </div> -->
+
+    <%= render 'refills/navigation' %>
 
       <div class="navigation-tools">
         <div class="search-bar">
