Added a link to show pages to email the musician or band owner

--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -3,6 +3,9 @@
 
 <%= image_tag @band.poster.profile %><br />
 
+<a href="mailto:<%= @band.leader.email%>?Subject=Hello">Contact Me</a>
+
+
 <h3>Description</h3>
 <p><%= @band.description %></p>
 
