--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,302 +1,302 @@
-@import "bourbon";
-@import "neat";
-
-@import 'http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css';
-@import 'http://fonts.googleapis.com/css?family=Roboto:700,400';
-
-body{
-  background-image: url(background/564960.jpg);
-  background-size: cover;
-  @include outer-container(12);
-
-  -webkit-font-smoothing: antialiased;
-}
-
-main {
-  @include outer-container;
-  .bands-list { @include span-columns(3);
-  }
-
-  .title {
-    font-size: 100px;
-  }
-
-  h1 {
-    text-align: center;
-    color: white;
-  }
-
-  h2 {
-    text-align: center;
-  }
-
-  h3 {
-    color: white;
-    margin-top: 25px;
-    text-align: center;
-    margin-left: 400px;
-  }
-
-  ul.band-list {
-    margin-left: 400px;
-
-    h1 {
-      color: white;
-      margin-bottom: 25px;
-    }
-
-    li {
-      text-align: center;
-      -webkit-box-shadow:
-        0 2px 8px rgba(0,0,0,0.5),
-        inset 0 1px rgba(255,255,255,0.3),
-        inset 0 10px 20px rgba(255,255,255,0.25),
-        inset 0 -15px 30px rgba(0,0,0,0.3);
-
-      a {
-        display: block;
-        color: white;
-      }
-    }
-  }
-
-  ul.musicians-list {
-    margin-left: 300px;
-    li {
-      text-align: center;
-      margin-bottom: 20px;
-      -webkit-box-shadow:
-        0 2px 8px rgba(0,0,0,0.5),
-        inset 0 1px rgba(255,255,255,0.3),
-        inset 0 10px 20px rgba(255,255,255,0.25),
-        inset 0 -15px 30px rgba(0,0,0,0.3);
-      border: blurred;
-
-      .social_icons {
-        display: inline-block;
-        width: 48px;
-        height: 48px;
-        line-height: 48px;
-        text-align: center;
-        border-radius: 50%;
-        outline: 0;
-
-        box-shadow:
-        0 2px 4px rgba(0,0,0, 0.12),
-        0 2px 4px rgba(0,0,0, 0.24);
-        }
-
-        h3.position_text
-        { margin-top: 50px;
-
-        }
-        .card_article{
-          width: 100%;
-        }
-
-        a.musician_aboutme {
-
-        }
-
-      p {
-        font-size: 0.77em;
-
-      }
-
-      a {
-      display: block;
-      color: white;
-
-      }
-    }
-  }
-}
-
-#sidebar {
-  background-color: white;
-  color: black;
-  position: fixed;
-  top: 60px;
-  right: -20%;
-  width: 20%;
-
-  transition: right 0.25s;
-}
-
-  .is-open {
-    right: 0;
-  }
-
-#nav-toggle.is-open {
-  color: white;
-}
-
-.hero {
-  background-image: url("home/index/Band_Aide_Logo");
-  background-size: cover;
-  margin-bottom: 30px;
-  height: 700px;
-  position: relative;
-  bottom: 210px;
-}
-
-
-
-
-// Code for modal, if we want one
-// .modal {
-//   $base-border-color: #dcdcdc !default;
-//   $base-border-radius: 3px !default;
-//   $base-background-color: #fff !default;
-//   $base-font-size: 1em !default;
-//   $base-line-height: 1.5em !default;
-//   $action-color: #477dca !default;
-//   $dark-gray: #333 !default;
-//   $light-gray: #ddd !default;
-//   $medium-screen: 40em !default;
-//   $large-screen: 53.75em !default;
-//   $base-font-color: $dark-gray !default;
-//   $modal-padding: 3em;
-//   $modal-background: $base-background-color;
-//   $modal-close-color: $light-gray;
-//   $modal-image-height: 135px;
-//   $modal-image-width: $modal-image-height;
-//   $modal-trigger-image-width: 300px;
+// @import "bourbon";
+// @import "neat";
 //
-//   label {
-//     cursor: pointer;
-//     margin-bottom: 0;
+// @import 'http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css';
+// @import 'http://fonts.googleapis.com/css?family=Roboto:700,400';
+//
+// body{
+//   background-image: url(background/564960.jpg);
+//   background-size: cover;
+//   @include outer-container(12);
+//
+//   -webkit-font-smoothing: antialiased;
+// }
+//
+// main {
+//   @include outer-container;
+//   .bands-list { @include span-columns(3);
 //   }
 //
-//   label img {
-//     border-radius: $modal-trigger-image-width / 2;
-//     display: block;
-//     max-width: $modal-trigger-image-width;
+//   .title {
+//     font-size: 100px;
 //   }
 //
-//   .modal-state {
-//     display: none;
+//   h1 {
+//     text-align: center;
+//     color: white;
 //   }
 //
-//   .modal-trigger {
-//     padding: 0.8em 1em;
-//     cursor: pointer;
+//   h2 {
+//     text-align: center;
 //   }
 //
-//   .modal-fade-screen { // overlay
-//     @include position(fixed, 0);
-//     background-color: rgba(#000, 0.85);
-//     opacity: 0;
-//     padding-top: 0.6em;
-//     text-align: left;
-//     transition: opacity 0.25s ease;
-//     visibility: hidden;
-//     z-index: 99999999999;
-//
-//     @include media($large-screen) {
-//       padding-top: 10em;
-//     }
-//
-//     .modal-bg {
-//       @include position(absolute, 0);
-//       cursor: pointer;
-//     }
+//   h3 {
+//     color: white;
+//     margin-top: 25px;
+//     text-align: center;
+//     margin-left: 400px;
 //   }
 //
-//   .modal-close {
-//     @include position(absolute, ($modal-padding /2) ($modal-padding /2) null null);
-//     @include size(1.5em);
-//     background: $modal-background;
-//     cursor: pointer;
-//
-//     &::after,
-//     &::before {
-//       @include position(absolute, 3px 3px 0 50%);
-//       // @include size(0.15em 1.5em);
-//       background: $modal-close-color;
-//       content: "";
-//       display: block;
-//       margin: -3px 0 0 -1px;
-//       transform: rotate(45deg);
-//     }
-//
-//     &:hover::after,
-//     &:hover::before {
-//       background: darken($modal-close-color, 10%);
-//     }
-//
-//     &::before {
-//       transform: rotate(-45deg);
-//     }
-//   }
-//
-//   .modal-inner {
-//     background: $modal-background;
-//     border-radius: $base-border-radius;
-//     margin: auto;
-//     margin-top: 0;
-//     max-height: 95%;
-//     overflow: auto;
-//     padding: $modal-padding / 2;
-//     position: relative;
-//     transition: opacity 0.25s ease;
-//     width: 95%;
-//
-//     @include media($medium-screen) {
-//       max-height: 70%;
-//       padding: $modal-padding;
-//       width: 60%;
-//     }
-//
-//     @include media($large-screen) {
-//       width: 50%;
-//     }
+//   ul.band-list {
+//     margin-left: 400px;
 //
 //     h1 {
-//       color: $base-font-color;
-//       text-align: left;
-//       text-transform: capitalize;
+//       color: white;
+//       margin-bottom: 25px;
 //     }
 //
-//     p {
-//       color: $base-font-color;
-//       line-height: $base-line-height;
-//     }
+//     li {
+//       text-align: center;
+//       -webkit-box-shadow:
+//         0 2px 8px rgba(0,0,0,0.5),
+//         inset 0 1px rgba(255,255,255,0.3),
+//         inset 0 10px 20px rgba(255,255,255,0.25),
+//         inset 0 -15px 30px rgba(0,0,0,0.3);
 //
-//     .modal-intro {
-//       margin-bottom: 1em;
-//     }
-//
-//     .modal-content {
-//       color: $base-font-color;
-//
-//       @include media($medium-screen) {
-//         columns: 2 8em;
-//       }
-//     }
-//
-//     a.cta {
-//       color: $base-background-color;
-//       display: inline-block;
-//       margin-right: 0.5em;
-//       margin-top: 1em;
-//
-//       &:last-child {
-//         padding: 0 2em;
+//       a {
+//         display: block;
+//         color: white;
 //       }
 //     }
 //   }
 //
-//   .modal-state:checked + .modal-fade-screen {
-//     opacity: 1;
-//     visibility: visible;
-//   }
+//   ul.musicians-list {
+//     margin-left: 300px;
+//     li {
+//       text-align: center;
+//       margin-bottom: 20px;
+//       -webkit-box-shadow:
+//         0 2px 8px rgba(0,0,0,0.5),
+//         inset 0 1px rgba(255,255,255,0.3),
+//         inset 0 10px 20px rgba(255,255,255,0.25),
+//         inset 0 -15px 30px rgba(0,0,0,0.3);
+//       border: blurred;
 //
-//   .modal-state:checked + .modal-fade-screen .modal-inner {
-//     top: 0.5em;
+//       .social_icons {
+//         display: inline-block;
+//         width: 48px;
+//         height: 48px;
+//         line-height: 48px;
+//         text-align: center;
+//         border-radius: 50%;
+//         outline: 0;
+//
+//         box-shadow:
+//         0 2px 4px rgba(0,0,0, 0.12),
+//         0 2px 4px rgba(0,0,0, 0.24);
+//         }
+//
+//         h3.position_text
+//         { margin-top: 50px;
+//
+//         }
+//         .card_article{
+//           width: 100%;
+//         }
+//
+//         a.musician_aboutme {
+//
+//         }
+//
+//       p {
+//         font-size: 0.77em;
+//
+//       }
+//
+//       a {
+//       display: block;
+//       color: white;
+//
+//       }
+//     }
 //   }
 // }
 //
-// .modal-open {
-//   overflow: hidden;
+// #sidebar {
+//   background-color: white;
+//   color: black;
+//   position: fixed;
+//   top: 60px;
+//   right: -20%;
+//   width: 20%;
+//
+//   transition: right 0.25s;
 // }
+//
+//   .is-open {
+//     right: 0;
+//   }
+//
+// #nav-toggle.is-open {
+//   color: white;
+// }
+//
+// .hero {
+//   background-image: url("home/index/Band_Aide_Logo");
+//   background-size: cover;
+//   margin-bottom: 30px;
+//   height: 700px;
+//   position: relative;
+//   bottom: 210px;
+// }
+//
+//
+//
+//
+// // Code for modal, if we want one
+// // .modal {
+// //   $base-border-color: #dcdcdc !default;
+// //   $base-border-radius: 3px !default;
+// //   $base-background-color: #fff !default;
+// //   $base-font-size: 1em !default;
+// //   $base-line-height: 1.5em !default;
+// //   $action-color: #477dca !default;
+// //   $dark-gray: #333 !default;
+// //   $light-gray: #ddd !default;
+// //   $medium-screen: 40em !default;
+// //   $large-screen: 53.75em !default;
+// //   $base-font-color: $dark-gray !default;
+// //   $modal-padding: 3em;
+// //   $modal-background: $base-background-color;
+// //   $modal-close-color: $light-gray;
+// //   $modal-image-height: 135px;
+// //   $modal-image-width: $modal-image-height;
+// //   $modal-trigger-image-width: 300px;
+// //
+// //   label {
+// //     cursor: pointer;
+// //     margin-bottom: 0;
+// //   }
+// //
+// //   label img {
+// //     border-radius: $modal-trigger-image-width / 2;
+// //     display: block;
+// //     max-width: $modal-trigger-image-width;
+// //   }
+// //
+// //   .modal-state {
+// //     display: none;
+// //   }
+// //
+// //   .modal-trigger {
+// //     padding: 0.8em 1em;
+// //     cursor: pointer;
+// //   }
+// //
+// //   .modal-fade-screen { // overlay
+// //     @include position(fixed, 0);
+// //     background-color: rgba(#000, 0.85);
+// //     opacity: 0;
+// //     padding-top: 0.6em;
+// //     text-align: left;
+// //     transition: opacity 0.25s ease;
+// //     visibility: hidden;
+// //     z-index: 99999999999;
+// //
+// //     @include media($large-screen) {
+// //       padding-top: 10em;
+// //     }
+// //
+// //     .modal-bg {
+// //       @include position(absolute, 0);
+// //       cursor: pointer;
+// //     }
+// //   }
+// //
+// //   .modal-close {
+// //     @include position(absolute, ($modal-padding /2) ($modal-padding /2) null null);
+// //     @include size(1.5em);
+// //     background: $modal-background;
+// //     cursor: pointer;
+// //
+// //     &::after,
+// //     &::before {
+// //       @include position(absolute, 3px 3px 0 50%);
+// //       // @include size(0.15em 1.5em);
+// //       background: $modal-close-color;
+// //       content: "";
+// //       display: block;
+// //       margin: -3px 0 0 -1px;
+// //       transform: rotate(45deg);
+// //     }
+// //
+// //     &:hover::after,
+// //     &:hover::before {
+// //       background: darken($modal-close-color, 10%);
+// //     }
+// //
+// //     &::before {
+// //       transform: rotate(-45deg);
+// //     }
+// //   }
+// //
+// //   .modal-inner {
+// //     background: $modal-background;
+// //     border-radius: $base-border-radius;
+// //     margin: auto;
+// //     margin-top: 0;
+// //     max-height: 95%;
+// //     overflow: auto;
+// //     padding: $modal-padding / 2;
+// //     position: relative;
+// //     transition: opacity 0.25s ease;
+// //     width: 95%;
+// //
+// //     @include media($medium-screen) {
+// //       max-height: 70%;
+// //       padding: $modal-padding;
+// //       width: 60%;
+// //     }
+// //
+// //     @include media($large-screen) {
+// //       width: 50%;
+// //     }
+// //
+// //     h1 {
+// //       color: $base-font-color;
+// //       text-align: left;
+// //       text-transform: capitalize;
+// //     }
+// //
+// //     p {
+// //       color: $base-font-color;
+// //       line-height: $base-line-height;
+// //     }
+// //
+// //     .modal-intro {
+// //       margin-bottom: 1em;
+// //     }
+// //
+// //     .modal-content {
+// //       color: $base-font-color;
+// //
+// //       @include media($medium-screen) {
+// //         columns: 2 8em;
+// //       }
+// //     }
+// //
+// //     a.cta {
+// //       color: $base-background-color;
+// //       display: inline-block;
+// //       margin-right: 0.5em;
+// //       margin-top: 1em;
+// //
+// //       &:last-child {
+// //         padding: 0 2em;
+// //       }
+// //     }
+// //   }
+// //
+// //   .modal-state:checked + .modal-fade-screen {
+// //     opacity: 1;
+// //     visibility: visible;
+// //   }
+// //
+// //   .modal-state:checked + .modal-fade-screen .modal-inner {
+// //     top: 0.5em;
+// //   }
+// // }
+// //
+// // .modal-open {
+// //   overflow: hidden;
+// // }
