--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,5 @@
 <body>
-  <div class="container">
 
-    <div class="hero">
-
-    </div>
 
     <main>
       <h1 class="title">Welcome to Band Aide</h1>
@@ -38,13 +34,13 @@
         </aside>
       </button>
 
-      <section id="bands-list">
+
         <h3>Bands</h3>
 
-        <div class="bands">
-          <%= render "home/bands" %>
-        </div>
-      </section>
+            <%= render "home/bands" %>
+
+
+
 
       <section id="musicians-list">
         <h3>Musicians near you</h3>
@@ -84,6 +80,25 @@
       </div>
 
     </aside>
-  </div>
+    <div class="row small-up-1 medium-up-2 large-up-4">
+      <div class="column">
+
+      </div>
+      <div class="column">
+
+      </div>
+      <div class="column">
+        <img src="//placehold.it/300x300" class="thumbnail" alt="">
+      </div>
+      <div class="column">
+        <img src="//placehold.it/300x300" class="thumbnail" alt="">
+      </div>
+      <div class="column">
+        <img src="//placehold.it/300x300" class="thumbnail" alt="">
+      </div>
+      <div class="column">
+        <img src="//placehold.it/300x300" class="thumbnail" alt="">
+      </div>
+    </div>
 
 </body>
